--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
+    "firebase": "^8.6.3",
+    "firebase-admin": "^9.9.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
